--- a/templates/home.html
+++ b/templates/home.html
@@ -58,6 +58,15 @@
         <!--main sec start-->
 
         <div class="content" id="content-area">
+            <div class="top-f">
+                <button id="menu_bar">
+                    <span class="material-symbols-outlined">menu</span>
+                </button>
+                <div class="theme-toggler">
+                    <span class="material-symbols-outlined active">light_mode</span>
+                    <span class="material-symbols-outlined">dark_mode</span>
+                </div>
+            </div>
             <div class="welcome-container">
                 <h2> Welcome to Your</h2>
                 <h1> Coding Journey!</h1>
@@ -66,6 +75,8 @@
                 <p>Your progress is just a click away. 💻</p>
             </div>
         </div>
+
+
         <!--main sec end-->
     </div>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
