--- a/static/css/stylemid.css
+++ b/static/css/stylemid.css
@@ -779,7 +779,6 @@ button:hover {
     overflow-x: auto;
     width: 100%;
     margin-top: 20px;
-    margin-left: 5px;
 }
 
 /* Table styling */
@@ -792,7 +791,6 @@ button:hover {
     box-shadow: var(--box-shadow);
     transition: all .3s ease;
     max-width: 300px;
-    margin-right: -15px;
 }
 
 #friends-table th, #friends-table td {
@@ -894,6 +892,15 @@ media query
         flex-direction: column; /* Stack the child divs vertically */
         align-items: center;
         padding: 0;
+    }
+    .middle-main .right .add-friends-section{
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        padding: 0;
+    }
+    .middle-main .right .table-wrapper{
+        margin: 20px auto 20px 20%;
     }
     .middle-main .right .new-contests {
         width: 90%; /* Adjust width in mobile view */
@@ -1038,9 +1045,7 @@ media query
         position: absolute;
         left: 1rem;
     }
-    .table-wrapper{
-        margin-left: 25%;
-    }
+    
 
 }
 
