--- a/static/css/stylemid.css
+++ b/static/css/stylemid.css
@@ -579,6 +579,7 @@ right sec styling
     gap: 2rem;
     margin-top: 10px;
 }
+
 .content .top-s{
     position: absolute;
     top: 0;
@@ -945,16 +946,12 @@ media query
         margin-right: 30px;
         font-size: 35px;
     }
-    .right .top .theme-toggler{
-        margin-left: -80px;
-    }
-    .right .profile{
-        margin-left: -50px;
+    .right .top .profile{
+        left: 60%;
     }
     .right .top{
         position: fixed;
         top: 0;
-        left: 0;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -962,9 +959,8 @@ media query
         background: var(--clr-white);
         width: 100%;
         height: 4.6rem; 
-        z-index: 2;
         box-shadow: 0 1rem 1rem var(--box-shadow);
-        margin: 0;
+        margin: 0 auto 0 auto;
     }
     .content .top-f{
         position: fixed;
