--- a/static/css/stylemid.css
+++ b/static/css/stylemid.css
@@ -884,9 +884,7 @@ media query
         flex-direction: column;
         align-items: stretch;
     }
-    .middle-main .right,.middle-main show-scroll-box{
-        margin-bottom: 10px;
-    }
+
     .middle-main .right {
         display: flex;
         flex-direction: column; /* Stack the child divs vertically */
@@ -947,13 +945,7 @@ media query
         margin-right: 30px;
         font-size: 35px;
     }
-
-    .right .top .theme-toggler{
-        margin-left: -80px;
-    }
-    .right .profile{
-        margin-left: -50px;
-    }
+    
     .right .top{
         position: fixed;
         top: 0;
@@ -1027,6 +1019,9 @@ media query
     .content main .show-scroll-box{
         padding: 20px;
         margin: 0 auto;
+    }
+    .middle-main .right .top{
+        gap: 0.5rem;
     }
     .right .top button{
         display: inline-block;
