updated logo link

--- a/templates/Geeksforgeeks.html
+++ b/templates/Geeksforgeeks.html
@@ -3,7 +3,7 @@
     <main>
         <div class="main-top">
             <div class="top-left">
-                <h1>Geeksforgeeks</h1>
+                <a href="https://www.geeksforgeeks.org/" target="_blank"><h1>Geeksforgeeks</h1></a>
                 <div class="date">
                     <input type="date" id="date-input">
                 </div>
